--- a/datamanager_wb/freecad/datamanager_wb/resources/ui/main_panel.ui
+++ b/datamanager_wb/freecad/datamanager_wb/resources/ui/main_panel.ui
@@ -150,6 +150,13 @@
               </property>
              </widget>
             </item>
+            <item>
+             <widget class="QPushButton" name="removeUnusedVariablesPushButton">
+              <property name="text">
+               <string>Remove Selected Unused Variable(s)</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
