--- a/freecad/datamanager_wb/resources/ui/main_panel.ui
+++ b/freecad/datamanager_wb/resources/ui/main_panel.ui
@@ -148,6 +148,9 @@
                   <property name="text">
                    <string/>
                   </property>
+                  <property name="icon">
+                   <iconset theme="QIcon::ThemeIcon::EditCopy"/>
+                  </property>
                   <property name="flat">
                    <bool>true</bool>
                   </property>
@@ -226,6 +229,9 @@
                   </property>
                   <property name="text">
                    <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset theme="QIcon::ThemeIcon::EditCopy"/>
                   </property>
                   <property name="flat">
                    <bool>true</bool>
@@ -313,6 +319,9 @@
                </property>
                <property name="text">
                 <string/>
+               </property>
+               <property name="icon">
+                <iconset theme="QIcon::ThemeIcon::EditCopy"/>
                </property>
                <property name="flat">
                 <bool>true</bool>
@@ -429,6 +438,9 @@
                   <property name="text">
                    <string/>
                   </property>
+                  <property name="icon">
+                   <iconset theme="QIcon::ThemeIcon::EditCopy"/>
+                  </property>
                   <property name="flat">
                    <bool>true</bool>
                   </property>
@@ -507,6 +519,9 @@
                   </property>
                   <property name="text">
                    <string/>
+                  </property>
+                  <property name="icon">
+                   <iconset theme="QIcon::ThemeIcon::EditCopy"/>
                   </property>
                   <property name="flat">
                    <bool>true</bool>
@@ -595,6 +610,9 @@
                <property name="text">
                 <string/>
                </property>
+               <property name="icon">
+                <iconset theme="QIcon::ThemeIcon::EditCopy"/>
+               </property>
                <property name="flat">
                 <bool>true</bool>
                </property>
@@ -609,9 +627,9 @@
       </layout>
      </widget>
     </widget>
-  </item>
- </layout>
-</widget>
+   </item>
+  </layout>
+ </widget>
  <resources/>
  <connections/>
 </ui>
